--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.application.name=memo
-server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/memo
 spring.datasource.username=root
-spring.datasource.password={dkssud455?}
+spring.datasource.password=dkssud455?
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
